# mingli-bench

./: .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  OPEN_SOURCE_RELEASE_PLAN.md  README.md  README_zh.md  pyproject.toml  requirements-openrouter.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: chart_api_example.py
mingli_bench/: __init__.py  agent.py  agent_eval.py  agent_eval_report.py  api.py  bazi.py  bazi_profile.py  benchmark.py  calendar.py  candidate_years.py  chart_api.py  charts.py  cli.py  dayun.py  hexagram.py  hexagram_data.py  hexagram_rules.py  integrated_analysis.py  intent.py  interactive.py  interpretation.py  locations.py  lunar.py  option_semantics.py  relations.py  report.py  run_metadata.py  solar_terms.py  web_ui.py
mingli_bench/data/: loader.py  schema.py
mingli_bench/models/: __init__.py  (+6 more)
tests/: test_agent.py  test_agent_eval.py  test_agent_eval_report.py  test_api.py  test_bazi.py  test_bazi_profile.py  test_benchmark.py  test_calendar.py  test_candidate_years.py  test_chart_api.py  test_charts.py  test_config.py  test_data_loader.py  test_dayun.py  test_hexagram.py  test_hexagram_data.py  test_hexagram_rules.py  test_hexagram_standalone.py  test_integrated_analysis.py  test_intent.py  test_interactive.py  test_interpretation.py  test_locations.py  test_lunar.py  test_message_utils.py  test_model_cache.py  test_openai_client.py  test_option_semantics.py  test_relations.py  test_report.py  test_run_metadata.py
(+2 files in other folders)
