[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mingli-bench"
version = "0.1.0"
description = "Chinese metaphysics benchmark and reusable Bazi/Ziwei chart utilities for LLM evaluation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "MingLi-Bench Contributors" }
]
keywords = [
  "bazi",
  "ziwei-doushu",
  "chinese-calendar",
  "llm-evaluation",
  "benchmark",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "tqdm>=4.65.0",
  "requests>=2.31.0",
  "openai>=1.0.0",
  "anthropic>=0.18.0",
  "google-generativeai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/muxiawei-ai/mingli-bench"
Issues = "https://github.com/muxiawei-ai/mingli-bench/issues"

[project.scripts]
mingli-bench = "mingli_bench.cli:main"

[tool.setuptools.packages.find]
include = ["mingli_bench*"]
